--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build:ui": "rm -rf build && cd ../lets-get-cooking-frontend && npm run build && cp -r build ../../lets-get-cooking/lets-get-cookin-backend",
+    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push"
   },
+  "proxy": "http://localhost:3001",
   "eslintConfig": {
     "extends": [
       "react-app",
